force-app/main/default/objects/S_cio__c/S_cio__c.object-meta.xml
<CustomObject>
    <label>Sócio</label>
    <nameField>
        <label>Nome de Sócio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sócios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>