force-app/main/default/objects/S_cio__c/fields/Contrato_de_Servi_o_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o_Relacionado__c</fullName>
    <label>Contrato de Serviço Relacionado</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Sócios</relationshipLabel>
    <relationshipName>S_cios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>