force-app/main/default/objects/S_cio__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <formula>S_cio__r.CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF</label>
    <type>Text</type>
</CustomField>