force-app/main/default/objects/S_cio__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>